[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/items/clipboard_extend.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MinigameChecklist.gd" type="Script" id=2]
[ext_resource path="res://Assets/background/main_settings.png" type="Texture" id=3]
[ext_resource path="res://Assets/items/check_in_clipboard.png" type="Texture" id=4]
[ext_resource path="res://Assets/fonts/CompassPro.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="MinigameChecklist" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 368.0
texture = ExtResource( 3 )

[node name="Clipboard" type="TextureRect" parent="."]
margin_left = 352.0
margin_right = 640.0
margin_bottom = 368.0
texture = ExtResource( 1 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Clipboard"]
margin_left = 32.0
margin_top = 64.0
margin_right = 256.0
margin_bottom = 336.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Clipboard/VBoxContainer"]
visible = false
margin_right = 224.0
margin_bottom = 33.0

[node name="TextureRect" type="TextureRect" parent="Clipboard/VBoxContainer/HBoxContainer"]
margin_right = 33.0
margin_bottom = 32.0
rect_min_size = Vector2( 33, 32 )
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Clipboard/VBoxContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 37.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "
"
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Clipboard/VBoxContainer"]
visible = false
margin_top = 46.0
margin_right = 224.0
margin_bottom = 72.0

[node name="TextureRect" type="TextureRect" parent="Clipboard/VBoxContainer/HBoxContainer2"]
margin_right = 33.0
margin_bottom = 32.0
rect_min_size = Vector2( 33, 32 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Clipboard/VBoxContainer/HBoxContainer2"]
margin_left = 31.0
margin_top = 5.0
margin_right = 31.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Clipboard/VBoxContainer"]
visible = false
margin_right = 224.0
margin_bottom = 26.0

[node name="TextureRect" type="TextureRect" parent="Clipboard/VBoxContainer/HBoxContainer3"]
margin_right = 33.0
margin_bottom = 32.0
rect_min_size = Vector2( 33, 32 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Clipboard/VBoxContainer/HBoxContainer3"]
margin_left = 31.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
valign = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="Clipboard/VBoxContainer"]
visible = false
margin_right = 224.0
margin_bottom = 26.0

[node name="TextureRect" type="TextureRect" parent="Clipboard/VBoxContainer/HBoxContainer4"]
margin_right = 33.0
margin_bottom = 32.0
rect_min_size = Vector2( 33, 32 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Clipboard/VBoxContainer/HBoxContainer4"]
margin_left = 31.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
valign = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="Clipboard/VBoxContainer"]
visible = false
margin_right = 224.0
margin_bottom = 26.0

[node name="TextureRect" type="TextureRect" parent="Clipboard/VBoxContainer/HBoxContainer5"]
margin_right = 33.0
margin_bottom = 32.0
rect_min_size = Vector2( 33, 32 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="Clipboard/VBoxContainer/HBoxContainer5"]
margin_left = 31.0
margin_top = 5.0
margin_right = 65.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
valign = 1

[node name="ItemsTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="SpawnItems" type="Node2D" parent="."]
position = Vector2( 0, -88 )

[node name="SpawnPositions" type="Node2D" parent="SpawnItems"]
position = Vector2( 312, 16 )
scale = Vector2( 1.52499, 9.18033 )

[node name="1" type="Position2D" parent="SpawnItems/SpawnPositions"]
position = Vector2( -173.116, 13.9429 )

[node name="2" type="Position2D" parent="SpawnItems/SpawnPositions"]
position = Vector2( -104.919, 29.6286 )

[node name="3" type="Position2D" parent="SpawnItems/SpawnPositions"]
position = Vector2( -43.9347, 36.6 )

[node name="4" type="Position2D" parent="SpawnItems/SpawnPositions"]
position = Vector2( -167.87, 34.8571 )

[node name="5" type="Position2D" parent="SpawnItems/SpawnPositions"]
position = Vector2( -36.7216, 17.4286 )

[node name="6" type="Position2D" parent="SpawnItems/SpawnPositions"]
position = Vector2( -104.919, 13.0714 )

[connection signal="timeout" from="ItemsTimer" to="." method="_on_ItemsTimer_timeout"]
